file structure css

--- a/assets/stylesheets/config/fonts.scss
+++ b/assets/stylesheets/config/fonts.scss
@@ -1,2 +1,2 @@
-$headers-font: "Circular", "sans-serif";
+$headers-font: "Circular Std", "sans-serif";
 $body-font: "Avenir", "Nunito Sans", "sans-serif";
