--- a/assets/stylesheets/components/step.css
+++ b/assets/stylesheets/components/step.css
@@ -5,7 +5,7 @@
 
 .step > p {
     font-family: 'Circular Std';
-    font-weight: bold;
+    font-weight: normal;
     font-size: 320px;
     color: #f2f2f2;
     margin: 0;
