--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,12 +1,14 @@
-/*// $grey-1: #333333;
-// $grey-2: #4f4f4f;
-// $grey-3: #828282;
-// $grey-4: #bdbdbd;
-// $grey-5: #e0e0e0;
-// $grey-6: #f2f2f2;
+/*
+$grey-1: #333333;
+$grey-2: #4f4f4f;
+$grey-3: #828282;
+$grey-4: #bdbdbd;
+$grey-5: #e0e0e0;
+$grey-6: #f2f2f2;
 
-// $wandern-blue: #1E222B;
-// $wandern-red: #A31621;*/
+$wandern-blue: #1E222B;
+$wandern-red: #A31621;
+*/
 
 @import url(components/banner.css);
 @import url(components/container.css);
@@ -22,12 +24,6 @@
   font-family: 'Circular Std';
   font-weight: normal;
   src: url('../fonts/Circular Std/CircularStd-Medium.ttf');
-}
-
-@font-face {
-  font-family: 'Circular Std';
-  font-weight: bold;
-  src: url('../fonts/Circular Std/CircularStd-Bold.ttf');
 }
 
 p {
