--- a/assets/stylesheets/components/feature.css
+++ b/assets/stylesheets/components/feature.css
@@ -6,7 +6,7 @@
 .features {
   display: flex;
   justify-content: space-around;
-  padding: 40px 0;
+  padding: 48px 0 64px 0;
 }
 
 .feature {
@@ -17,7 +17,7 @@
   letter-spacing: 0.12em;
   font-size: 14px;
   font-weight: bold;
-  margin-bottom: 16px;
+  margin: 16px 0;
 }
 
 .feature-description {
