--- a/assets/stylesheets/components/feature.css
+++ b/assets/stylesheets/components/feature.css
@@ -6,7 +6,8 @@
 .features {
   display: flex;
   justify-content: space-around;
-  padding: 48px 0 64px 0;
+  padding: 56px 0 72px 0;
+  flex-wrap: wrap;
 }
 
 .feature {
