--- a/assets/stylesheets/components/footer.css
+++ b/assets/stylesheets/components/footer.css
@@ -6,4 +6,12 @@
 .footer a {
   font-weight: bold;
   color: #828282;
+  margin: 0 8px;
+  font-size: 14px;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
