--- a/assets/stylesheets/components/step.css
+++ b/assets/stylesheets/components/step.css
@@ -6,7 +6,7 @@
 .step > p {
     font-family: 'Circular Std';
     font-weight: normal;
-    font-size: 320px;
+    font-size: 300px;
     color: #f2f2f2;
     margin: 0;
     width: 200px;
@@ -39,7 +39,7 @@
 }
 
 .btn-outlined:hover {
-  background: #333333;
+  background: #A31621;
+  border: 2px solid #A31621;
   color: white;
-  font-weight: normal;
 }
