--- a/assets/stylesheets/components/footer.css
+++ b/assets/stylesheets/components/footer.css
@@ -4,10 +4,13 @@
 }
 
 .footer a {
-  font-weight: bold;
   color: #828282;
   margin: 0 8px;
   font-size: 14px;
+}
+
+.footer a:hover {
+  color: #333333;
 }
 
 .footer-content {
