--- a/assets/stylesheets/components/feature.css
+++ b/assets/stylesheets/components/feature.css
@@ -6,7 +6,7 @@
 .features {
   display: flex;
   justify-content: space-around;
-  padding: 56px 0 72px 0;
+  padding: 64px 0 80px 0;
 }
 
 .feature {
@@ -14,9 +14,8 @@
 }
 
 .feature-title {
-  letter-spacing: 0.12em;
-  font-size: 14px;
-  font-weight: bold;
+  font-family: 'Circular Std';
+  font-size: 20px;
   margin: 16px 0;
 }
 
