--- a/assets/stylesheets/components/banner.css
+++ b/assets/stylesheets/components/banner.css
@@ -37,7 +37,11 @@
   background: #A31621;
   border: none;
   border-radius: 0 8px 8px 0;
-  padding: 8px 20px;
+  padding: 10px 16px 6px 16px;
+}
+
+form.hide-submit input[type="submit"] {
+  display: none;
 }
 
 input:focus,
@@ -49,5 +53,5 @@ button:focus {
 
 #form-request-access {
   display: flex;
-  margin-top: 24px;
+  margin-top: 20px;
 }
