--- a/assets/stylesheets/components/feature.css
+++ b/assets/stylesheets/components/feature.css
@@ -6,11 +6,17 @@
 .features {
   display: flex;
   justify-content: space-around;
-  padding: 64px 0 80px 0;
+  padding: 32px 0 80px 0;
+  flex-wrap: wrap;
 }
 
 .feature {
   width: 240px;
+  text-align: center;
+}
+
+.feature svg {
+  padding-top: 32px;
 }
 
 .feature-title {
@@ -19,6 +25,13 @@
   margin: 16px 0;
 }
 
-.feature-description {
+/*Smallest device*/
+@media (min-width: 100px) and (max-width: 575px) {
+
+
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
 
 }
