--- a/assets/stylesheets/components/step.css
+++ b/assets/stylesheets/components/step.css
@@ -1,3 +1,7 @@
+.grey-background {
+  background: #f2f2f2;
+}
+
 #steps-title {
   padding-top: 80px;
   font-size: 40px;
@@ -11,6 +15,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 48px 0;
+  flex-wrap: wrap;
 }
 
 .reverse {
@@ -37,7 +42,7 @@
     font-family: 'Circular Std';
     font-weight: normal;
     font-size: 300px;
-    color: #f2f2f2;
+    color: #bdbdbd;
     margin: 0;
     width: 200px;
   }
@@ -73,3 +78,38 @@
   border: 2px solid #A31621;
   color: white;
 }
+
+/*-----------------------------------MOBILE-----------------------------------*/
+
+/*Smallest device*/
+@media (min-width: 100px) and (max-width: 575px) {
+  .step {
+    padding: 0;
+  }
+  .step-info {
+    flex-direction: column;
+    justify-content: center;
+    width: 100vw;
+    text-align: center;
+  }
+
+  .step-image {
+    width: 100vw;
+    display: flex;
+  }
+
+  .step-image img {
+    min-height: 200px;
+  }
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+
+}
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+
+}
+
