--- a/assets/stylesheets/components/feature.css
+++ b/assets/stylesheets/components/feature.css
@@ -7,7 +7,6 @@
   display: flex;
   justify-content: space-around;
   padding: 32px 0 80px 0;
-  flex-wrap: wrap;
 }
 
 .feature {
@@ -32,6 +31,9 @@
 }
 
 /*Medium devices (tablets, 768px and up)*/
-@media (min-width: 768px) {
-
+@media (max-width: 900px) {
+  .features {
+    flex-direction: column;
+    align-items: center;
+  }
 }
