--- a/assets/stylesheets/components/step.css
+++ b/assets/stylesheets/components/step.css
@@ -15,7 +15,6 @@
   align-items: center;
   justify-content: space-between;
   padding: 48px 0;
-  flex-wrap: wrap;
 }
 
 .reverse {
@@ -35,7 +34,8 @@
 }
 
 .step-image img {
-  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 
 .step-info-number {
@@ -83,8 +83,14 @@
 
 /*Smallest device*/
 @media (min-width: 100px) and (max-width: 575px) {
+
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (max-width: 1100px) {
   .step {
     padding: 0;
+    flex-direction: column;
   }
   .step-info {
     flex-direction: column;
@@ -98,14 +104,13 @@
     display: flex;
   }
 
-  .step-image img {
-    min-height: 200px;
+  .step-info-number {
+    font-size: 240px;
   }
-}
 
-/*Medium devices (tablets, 768px and up)*/
-@media (min-width: 768px) {
-
+  .step-image img {
+    margin: 24px;
+  }
 }
 
 /*Large devices (desktops, 992px and up)*/
