Fixed CSS for address tag

--- a/assets/stylesheets/components/footer.css
+++ b/assets/stylesheets/components/footer.css
@@ -12,6 +12,7 @@
   margin: 0 8px;
   font-size: 14px;
   margin: 8px;
+  font-style: normal; /* overrides address italic */
 }
 
 .footer a:hover {
