--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -15,6 +15,7 @@ $wandern-red: #A31621;
 @import url(components/feature.css);
 @import url(components/footer.css);
 @import url(components/step.css);
+@import url(components/privacy.css);
 
 /*------------------------------------FONTS-----------------------------------*/
 
@@ -34,6 +35,7 @@ p, address {
 h1, h2, h3 {
   font-family: "Circular Std", "sans-serif";
   margin: 0;
+  font-size: 40px;
 }
 
 a {
