Privacy policy added

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -31,8 +31,8 @@
     </ul>
     <p>We also receive personal information indirectly, from the following sources in the following scenarios:</p>
     <ul>
-      <li>We use analytics software such as Google Analytics on our website to help us analyse the traffic on our website. For more information on Google Analytics’ processing of Personal Data, please see http://www.google.com/policies/privacy/partners/</li>
-      <li>Cookies. We use cookies to make interactions with our website easy and meaningful. When you visit our website, our servers may send a cookie to your computer. Standing alone, cookies do not personally identify you; they merely recognize your web browser. Please note that if you disable your web browser’s ability to accept cookies, you will be able to navigate our website.</li>
+      <li>We use analytics software such as Google Analytics on our website to help us analyse the traffic on our website. For more information on <a href="http://www.google.com/policies/privacy/partners/">Google Analytics’ processing of Personal Data.</a></li>
+      <li>We use cookies to make interactions with our website easy and meaningful. When you visit our website, our servers may send a cookie to your computer. Standing alone, cookies do not personally identify you; they merely recognize your web browser. Please note that if you disable your web browser’s ability to accept cookies, you will be able to navigate our website.</li>
     </ul>
     <p>We use the information that you have given us in order to</p>
     <ul>
@@ -54,6 +54,7 @@
     <h2>4. Your data protection rights</h2>
     <p>
       Under data protection law, you have rights including:
+      <br>
       <br><strong>Your right of access</strong> - You have the right to ask us for copies of your personal information.
       <br><strong>Your right to rectification</strong> - You have the right to ask us to rectify personal information you think is inaccurate. You also have the right to ask us to complete information you think is incomplete.
       <br><strong>Your right to erasure</strong> - You have the right to ask us to erase your personal information in certain circumstances.
@@ -66,10 +67,6 @@
     <h2>5. How to complain</h2>
     <p>If you have any concerns about our use of your personal information, you can make a complaint to us at hello@wanderntrails.com.</p>
   </div>
-  <br>
-  <br>
-  <br>
-  <br>
   <div class="footer">
     <a href="/">
       <svg width="64" height="54" viewBox="0 0 75 64" fill="none" xmlns="http://www.w3.org/2000/svg">
