Added Le Wagon Meta tags

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 <!-- <html> -->
 {% extends "layout.html" %}
 
-{% block head %}
-  <title>Wandern | Plan your trail accommodation</title>
+{% block title %}
+  Wandern | Plan your trail accommodation
 {% endblock %}
 
 {% block body %}
