--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block head %}
-  <title>Privacy Policy | Wandern</title>
+  Privacy Policy | Wandern
 {% endblock %}
 
 {% block body %}
