--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,6 +16,7 @@
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="app">
+    <meta name="twitter:text:title" content="Wandern | Plan your trail accommodation">
     <meta name="twitter:title" content="Wandern | Plan your trail accommodation">
     <meta name="twitter:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails.">
     <meta name="twitter:image:src" content="http://wandern.herokuapp.com/app-logo.png">
