Add HTML5 Footer tag

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,8 +36,8 @@
   <body>
     {% block body %}
     {% endblock %}
-    
-    <div class="footer">
+
+    <footer>
       <a href="/">
         <svg width="64" height="54" viewBox="0 0 75 64" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M41.2035 1L44.1664 6.18519L47.1294 1" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -48,6 +48,6 @@
       </a>
       <a class="unselectable" href="/privacy">Privacy Policy</a>
       <address>hello@wanderntrails.com</address>
-    </div>
+    </footer>
   </body>
 </html>
