--- a/assets/stylesheets/components/footer.css
+++ b/assets/stylesheets/components/footer.css
@@ -1,4 +1,4 @@
-.footer {
+footer {
   padding: 16px 0;
   display: flex;
   justify-content: center;
@@ -7,7 +7,7 @@
   flex-direction: column;
 }
 
-.footer a, .footer address {
+footer a, footer address {
   color: white;
   margin: 0 8px;
   font-size: 14px;
@@ -15,6 +15,6 @@
   font-style: normal; /* overrides address italic */
 }
 
-.footer a:hover {
+footer a:hover {
   color: #e0e0e0;
 }
