Add A link tags to URLs & emails

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -1,7 +1,7 @@
 <!-- <html> -->
 {% extends "layout.html" %}
 
-{% block head %}
+{% block title %}
   Privacy Policy | Wandern
 {% endblock %}
 
@@ -31,7 +31,7 @@
     </ul>
     <p>We also receive personal information indirectly, from the following sources in the following scenarios:</p>
     <ul>
-      <li>We use analytics software such as Google Analytics on our website to help us analyse the traffic on our website. For more information on Google Analytics’ processing of Personal Data, please see http://www.google.com/policies/privacy/partners/</li>
+      <li>We use analytics software such as Google Analytics on our website to help us analyse the traffic on our website. For more information on Google Analytics’ processing of Personal Data, please see <u><a target="_blank" href="https://policies.google.com/technologies/partner-sites">policies.google.com/technologies/partner-sites</a></u></li>
       <li>Cookies. We use cookies to make interactions with our website easy and meaningful. When you visit our website, our servers may send a cookie to your computer. Standing alone, cookies do not personally identify you; they merely recognize your web browser. Please note that if you disable your web browser’s ability to accept cookies, you will be able to navigate our website.</li>
     </ul>
     <p>We use the information that you have given us in order to</p>
@@ -42,11 +42,11 @@
     </ul>
     <p>Under the General Data Protection Regulation (GDPR), the lawful bases we rely on for processing this information are:</p>
     <ul>
-      <li>Your consent. You are able to remove your consent at any time. You can do this by contacting hello@wanderntrails.com </li>
+      <li>Your consent. You are able to remove your consent at any time. You can do this by contacting <u><a target="_blank" href="mailto:hello@wanderntrails.com">hello@wanderntrails.com</a></u></li>
     </ul>
     <h2>3. How we store your personal information</h2>
     <p>
-      Your information is securely stored on Airtable and Mailchimp.
+      Your information is securely stored on Airtable.
       <br>
       <br>
       We keep your email address for 5 years. We will then dispose your information by permanently deleting both databases in which your e-mail is stored.</p>
@@ -60,11 +60,11 @@
       <br><strong>Your right to restriction of processing</strong> - You have the right to ask us to restrict the processing of your personal information in certain circumstances.
       <br><strong>Your right to object to processing</strong> - You have the the right to object to the processing of your personal information in certain circumstances.
       <br><strong>Your right to data portability</strong> - You have the right to ask that we transfer the personal information you gave us to another organisation, or to you, in certain circumstances.
-      <br>You are not required to pay any charge for exercising your rights. If you make a request, we have one month to respond to you. Please contact us at hello@wanderntrails.com if you wish to make a request.
+      <br>You are not required to pay any charge for exercising your rights. If you make a request, we have one month to respond to you. Please contact us at <u><a target="_blank" href="mailto:hello@wanderntrails.com">hello@wanderntrails.com</a></u> if you wish to make a request.
     </p>
     <br>
     <h2>5. How to complain</h2>
-    <p>If you have any concerns about our use of your personal information, you can make a complaint to us at hello@wanderntrails.com.</p>
+    <p>If you have any concerns about our use of your personal information, you can make a complaint to us at <u><a target="_blank" href="mailto:hello@wanderntrails.com">hello@wanderntrails.com</a></u></p>
   </div>
   <br>
   <br>
