--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -49,7 +49,7 @@
       Your information is securely stored on Airtable.
       <br>
       <br>
-      We keep your email address for 5 years. We will then dispose your information by permanently deleting both databases in which your e-mail is stored.</p>
+      We keep your email address for 5 years. We will then dispose your information by permanently deleting both databases in which your email is stored.</p>
       <br>
     <h2>4. Your data protection rights</h2>
     <p>
