--- a/assets/stylesheets/components/banner.css
+++ b/assets/stylesheets/components/banner.css
@@ -26,7 +26,7 @@
 }
 
 .input-email {
-  padding: 12px 0 12px 14px;
+  padding: 14px 0 14px 14px;
   border-radius: 8px 0 0 8px;
   border: none;
   font-family: "Avenir", "Nunito Sans", "sans-serif";
@@ -38,7 +38,13 @@
   background: #A31621;
   border: none;
   border-radius: 0 8px 8px 0;
-  padding: 10px 16px 6px 16px;
+  padding: 12px 16px 6px 16px;
+}
+
+.input-message {
+  margin-top: 8px;
+  font-size: 14px;
+  color: white;
 }
 
 form.hide-submit input[type="submit"] {
@@ -58,6 +64,7 @@ select:focus,
 textarea:focus,
 button:focus {
     outline: none;
+    background: #F2F2F2;
 }
 
 #form-request-access {
@@ -71,6 +78,6 @@ button:focus {
   }
 
   .title {
-    font-size: 32px;
+    font-size: 36px;
   }
 }
