--- a/assets/stylesheets/components/banner.css
+++ b/assets/stylesheets/components/banner.css
@@ -34,6 +34,17 @@
   width: 240px;
 }
 
+.shake {
+  animation: shake 0.2s ease-in-out 0s 2;
+}
+
+@keyframes shake {
+  0% { margin-left: 0rem; }
+  25% { margin-left: 0.2rem; }
+  75% { margin-left: -0.2rem; }
+  100% { margin-left: 0rem; }
+}
+
 .btn-send {
   background: #A31621;
   border: none;
@@ -45,7 +56,14 @@
   margin-top: 8px;
   font-size: 14px;
   color: white;
+  animation: fadein 0.5s;
 }
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
 
 form.hide-submit input[type="submit"] {
   display: none;
