Underlined Google Analytics URL

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -31,7 +31,7 @@
     </ul>
     <p>We also receive personal information indirectly, from the following sources in the following scenarios:</p>
     <ul>
-      <li>We use analytics software such as Google Analytics on our website to help us analyse the traffic on our website. For more information on <a target="_blank" href="http://www.google.com/policies/privacy/partners/">Google Analytics’ processing of Personal Data.</a></li>
+      <li>We use analytics software such as Google Analytics on our website to help us analyse the traffic on our website. For more information on <u><a target="_blank" href="https://policies.google.com/technologies/partner-sites">Google Analytics’ processing of Personal Data.</a></u></li>
       <li>We use cookies to make interactions with our website easy and meaningful. When you visit our website, our servers may send a cookie to your computer. Standing alone, cookies do not personally identify you; they merely recognize your web browser. Please note that if you disable your web browser’s ability to accept cookies, you will be able to navigate our website.</li>
     </ul>
     <p>We use the information that you have given us in order to</p>
