Changed URLs to wanderntrails.com

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,8 +9,8 @@
     <!-- Facebook Open Graph data -->
     <meta property="og:title" content="Wandern | Plan your trail accommodation" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://wandern.herokuapp.com" />
-    <meta property="og:image" content="http://wandern.herokuapp.com/og-image.png" />
+    <meta property="og:url" content="http://wanderntrails.com" />
+    <meta property="og:image" content="http://wanderntrails.com/og-image.png" />
     <meta property="og:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails." />
     <meta property="og:site_name" content="Wandern" />
 
@@ -19,7 +19,7 @@
     <meta name="twitter:text:title" content="Wandern | Plan your trail accommodation">
     <meta name="twitter:title" content="Wandern | Plan your trail accommodation">
     <meta name="twitter:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails.">
-    <meta name="twitter:image:src" content="http://wandern.herokuapp.com/og-image.png">
+    <meta name="twitter:image:src" content="http://wanderntrails.com/og-image.png">
 
     <meta name="author" content="Alizeh Khan & Seyhan Van Khan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
