--- a/assets/stylesheets/components/banner.css
+++ b/assets/stylesheets/components/banner.css
@@ -1,6 +1,6 @@
 .banner {
   height: 640px;
-  background-image: url(../../images/banner.png);
+  background-image: url(../../images/banner.jpg);
   background-size: cover;
   background-position: center;
   display: flex;
