--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,6 +24,15 @@
     <meta name="author" content="Alizeh Khan & Seyhan Van Khan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SX8983NMH1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-SX8983NMH1');
+    </script>
+
     <link rel="icon" href="/favicon.ico"><!-- 32×32 -->
     <link rel="icon" href="/icon.svg" type="image/svg+xml" sizes="any">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
