--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -46,7 +46,7 @@
     </ul>
     <h2>3. How we store your personal information</h2>
     <p>
-      Your information is securely stored on Airtable.
+      Your information is securely stored on Airtable and Mailchimp.
       <br>
       <br>
       We keep your email address for 5 years. We will then dispose your information by permanently deleting both databases in which your email is stored.</p>
