--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="step-image">
-          <img src="assets/images/step-3.jpg" alt="Preview of reservations window">
+          <img src="assets/images/step-3.png" alt="Preview of reservations window">
         </div>
       </div>
     </div>
