--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -49,42 +49,10 @@ body {
   color: #333333;
 }
 
-.unselectable, img, .step-info-number, .btn-outlined, .calendly-badge-content {
+.unselectable, img, .step-info-number, .btn-outlined {
   user-select: none;
 }
 
 img {
   pointer-events: none;
-}
-
-/* -------------------------------------------------------------------------- */
-                  /* CALENDLY CSS COPIED FROM MINDBODYLAW */
-/* -------------------------------------------------------------------------- */
-
-
-body .calendly-badge-widget .calendly-badge-content {
-  padding: 15px 20px;
-  border-radius: 8px;
-  box-shadow: rgba(47, 47, 47, 0.5) 0 2px 5px;
-  font-family: Avenir, 'Nunito Sans', sans-serif;
-  text-transform: uppercase;
-  vertical-align: middle;
-  letter-spacing: 0.1em;
-  font-size: 0.8em;
-}
-
-.calendly-badge-widget .calendly-badge-content:hover {
-  opacity: 0.8
-}
-
-@media screen and (max-width: 600px) {
-  #calendly-button-text {
-    display: none
-  }
-}
-
-@media screen and (max-width: 600px) {
-  body .calendly-badge-widget .calendly-badge-content {
-    border-radius: 50%;
-  }
 }
