--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,21 +12,21 @@
     <meta charset="utf-8">
 
     <title>{% block title %}{% endblock %}</title>
-    <meta name="description" content="An easy way to find and book mountain huts and campsites on popular hiking trails.">
+    <meta name="description" content="An easy way to find and book mountain huts and campsites on popular hiking trails. See your trail’s stages, water sources, and resupply points.">
 
     <!-- Facebook Open Graph data -->
     <meta property="og:title" content="Wandern | Plan your trail accommodation" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://wanderntrails.com" />
     <meta property="og:image" content="http://wanderntrails.com/og-image.png" />
-    <meta property="og:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails." />
+    <meta property="og:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails. See your trail’s stages, water sources, and resupply points." />
     <meta property="og:site_name" content="Wandern" />
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="app">
     <meta name="twitter:text:title" content="Wandern | Plan your trail accommodation">
     <meta name="twitter:title" content="Wandern | Plan your trail accommodation">
-    <meta name="twitter:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails.">
+    <meta name="twitter:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails. See your trail’s stages, water sources, and resupply points.">
     <meta name="twitter:image:src" content="http://wanderntrails.com/og-image.png">
 
     <meta name="author" content="Alizeh Khan & Seyhan Van Khan">
