full height banner and responsiveness

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,8 @@
       {% elif inputMessage == "error" %}
         <p class="input-message">⚠️ Oops something went wrong, please try again!</p>
       {% endif %}
+      <a class="ca3-scroll-down-link ca3-scroll-down-arrow" data-ca3_iconfont="ETmodules" data-ca3_icon=""></a>
+
     </div>
   </div>
 
