full height banner and responsiveness

--- a/assets/stylesheets/components/step.css
+++ b/assets/stylesheets/components/step.css
@@ -84,6 +84,11 @@
   color: white;
 }
 
+.hideme
+{
+    opacity:0;
+}
+
 /*-----------------------------------MOBILE-----------------------------------*/
 
 /*Smallest device*/
