--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 
   <div class="grey-background">
     <div class="container">
-      <div class="step">
+      <div class="step hideme">
         <div class="step-info">
           <p class="step-info-number">1</p>
           <div class="step-info-words">
@@ -61,7 +61,7 @@
   </div>
 
   <div class="container">
-    <div class="step reverse">
+    <div class="step reverse hideme">
       <div class="step-info">
         <p class="step-info-number">2</p>
         <div class="step-info-words">
@@ -77,7 +77,7 @@
   </div>
 
   <div class="grey-background">
-    <div class="container">
+    <div class="container hideme">
       <div class="step">
         <div class="step-info">
           <p class="step-info-number">3</p>
