--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,6 +39,7 @@
 
     <link rel="stylesheet" href="/assets/stylesheets/style.css" >
     <script src="/assets/jquery/jquery.min.js"></script>
+    <script src="/assets/javascript/application.js"></script>
   </head>
 
   <body>
