--- a/assets/stylesheets/components/step.css
+++ b/assets/stylesheets/components/step.css
@@ -84,10 +84,10 @@
   color: white;
 }
 
-.hideme
+/*.hideme
 {
     opacity:0;
-}
+}*/
 
 /*-----------------------------------MOBILE-----------------------------------*/
 
