--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,7 +38,7 @@
     <link rel="manifest" href="/manifest.webmanifest">
 
     <link rel="stylesheet" href="/assets/stylesheets/style.css" >
-    <script src="/assets/jquery/jquery.min.js"></script>
+    <script src="/assets/jquery/jquery-3.5.1.min.js"></script>
     <script src="/assets/javascript/application.js"></script>
   </head>
 
