--- a/templates/index.html
+++ b/templates/index.html
@@ -42,54 +42,50 @@
     </div>
   </div>
 
-  <div class="grey-background">
-    <div class="container">
-      <div class="step hideme">
-        <div class="step-info">
-          <p class="step-info-number">1</p>
-          <div class="step-info-words">
-            <h2>Pick a trail</h2>
-            <p>Explore mountain huts and campsites along on your trail. See the trail’s stages, water sources, and resupply points.</p>
-            <p onclick="$('html,body').animate({scrollTop:0}, 900)" class="btn-outlined">Request access</p>
-          </div>
+  <div class="box grey">
+    <div class="split container">
+      <div class="box-info">
+        <p class="number">1</p>
+        <div class="title-description-button">
+          <h2>Pick a trail</h2>
+          <p>Explore mountain huts and campsites along on your trail. See the trail’s stages, water sources, and resupply points.</p>
+          <p onclick="$('html,body').animate({scrollTop:0}, 900)" class="btn-outlined">Request access</p>
         </div>
-        <div class="step-image">
-          <img src="assets/images/step-1.png" alt="Preview of map with trail route and waypoints">
-        </div>
+      </div>
+      <div class="box-image">
+        <img src="assets/images/step-1.png" alt="Preview of map with trail route and waypoints">
       </div>
     </div>
   </div>
 
-  <div class="container">
-    <div class="step reverse hideme">
-      <div class="step-info">
-        <p class="step-info-number">2</p>
-        <div class="step-info-words">
-          <h2>Build your itinerary</h2>
-          <p>Check availability and add the campsite or hut, you’d like to stay at, to your itinerary. See your trip unfold on the map.</p>
-          <p onclick="$('html,body').animate({scrollTop:0}, 1100)" class="btn-outlined">Request access</p>
-        </div>
-      </div>
-      <div class="step-image">
+  <div class="box">
+    <div class="split container reverse">
+      <div class="box-image">
         <img src="assets/images/step-2.png" alt="Preview of accommodation cards added to itinerary and availability calendar">
       </div>
+      <div class="box-info">
+        <p class="number">2</p>
+        <div class="title-description-button">
+          <h2>Build your itinerary</h2>
+          <p>Check availability and add the campsite or hut, you’d like to stay at, to your itinerary. See your trip unfold on the map.</p>
+          <p onclick="$('html,body').animate({scrollTop:0}, 900)" class="btn-outlined">Request access</p>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div class="grey-background">
-    <div class="container hideme">
-      <div class="step">
-        <div class="step-info">
-          <p class="step-info-number">3</p>
-          <div class="step-info-words">
-            <h2>Book accommodation</h2>
-            <p>Book all your accommdation in just a few clicks without leaving the site.</p>
-            <p onclick="$('html,body').animate({scrollTop:0}, 1300)" class="btn-outlined">Request access</p>
-          </div>
+  <div class="box grey">
+    <div class="split container">
+      <div class="box-info">
+        <p class="number">3</p>
+        <div class="title-description-button">
+          <h2>Book accommodation</h2>
+          <p>Book all your accommdation in just a few clicks without leaving the site.</p>
+          <p onclick="$('html,body').animate({scrollTop:0}, 900)" class="btn-outlined">Request access</p>
         </div>
-        <div class="step-image">
-          <img src="assets/images/step-3.png" alt="Preview of reservations window">
-        </div>
+      </div>
+      <div class="box-image">
+        <img src="assets/images/step-3.png" alt="Preview of booking checkout">
       </div>
     </div>
   </div>
