--- a/assets/stylesheets/components/privacy.css
+++ b/assets/stylesheets/components/privacy.css
@@ -8,10 +8,13 @@
 .privacy > h1 {
   text-align: center;
   margin: 40px 0 80px 0;
+  letter-spacing: -0.02em;
+
 }
 
 .privacy > h2 {
   font-size: 24px;
+  letter-spacing: -0.01em;
   margin-bottom: 16px;
 }
 
