--- a/assets/stylesheets/components/banner.css
+++ b/assets/stylesheets/components/banner.css
@@ -1,27 +1,29 @@
 .banner {
   min-height: 640px;
   height: 100vh;
-  background-image: url(../../images/banner.jpg);
+  background-image: url(../../images/banner-dark.jpg);
   background-size: cover;
   background-position: center;
   display: flex;
 }
 
-.logo {
-  padding-top: 32px;
+.center-logo {
+  padding-top: 40px;
+  display: flex;
+  justify-content: center;
 }
 
 .title {
+  font-size: 64px;
   padding-top: 120px;
-  font-size: 44px;
-  max-width: 360px;
   color: white;
-  font-weight:normal;
+  font-weight: lighter;
+  text-align: center;
 }
 
 .subtitle {
-  font-size: 18px;
-  max-width: 360px;
+  font-size: 24px;
+  text-align: center;
   color: white;
   padding: 16px 0;
 }
@@ -66,6 +68,11 @@
 }
 
 
+form {
+  display: flex;
+  justify-content: center;
+}
+
 form.hide-submit input[type="submit"] {
   display: none;
 }
@@ -103,7 +110,11 @@ button:focus {
   }
 
   .title {
-    font-size: 36px;
+    font-size: 44px;
+  }
+
+  .subtitle {
+    font-size: 18px;
   }
 }
 
