--- a/assets/stylesheets/components/privacy.css
+++ b/assets/stylesheets/components/privacy.css
@@ -7,9 +7,10 @@
 
 .privacy > h1 {
   text-align: center;
+  font-size: 64px;
   margin: 40px 0 80px 0;
   letter-spacing: -0.02em;
-
+  font-weight: lighter;
 }
 
 .privacy > h2 {
