--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -23,19 +23,36 @@ $wandern-red: #A31621;
 
 @font-face {
   font-family: 'Circular Std';
+  font-weight: lighter;
+  src: url('../fonts/Circular Std/CircularStd-Book.ttf');
+}
+
+@font-face {
+  font-family: 'Circular Std';
   font-weight: normal;
   src: url('../fonts/Circular Std/CircularStd-Medium.ttf');
+}
+
+@font-face {
+  font-family: 'Circular Std';
+  font-weight: bold;
+  src: url('../fonts/Circular Std/CircularStd-Bold.ttf');
 }
 
 p, address {
   font-family: "Avenir", "Nunito Sans", "sans-serif";
   margin: 0;
+  line-height: 1.4em;
 }
 
 h1, h2, h3 {
-  font-family: "Circular Std", "sans-serif";
+  font-family: "Circular Std", "Nunito Sans", "sans-serif";
   margin: 0;
-  font-size: 40px;
+  letter-spacing: -0.02em;
+}
+
+h1, h2 {
+  font-size: 56px;
 }
 
 a {
