--- a/assets/stylesheets/components/step.css
+++ b/assets/stylesheets/components/step.css
@@ -77,17 +77,18 @@
     padding: 64px 0;
   }
 
-  .box-image, .box-info{
-    width: auto;
-    height: auto;
+  .reverse {
+    flex-direction: column-reverse;
+  }
+
+  .box-image {
+    width: 100%;
+    padding: 16px;
   }
 
   .box-image img {
-    max-width:100%;
-  }
-
-  .reverse {
-    flex-direction: column-reverse;
+    max-width: 100vw;
+    object-fit: contain;
   }
 
   .box-info {
