--- a/assets/stylesheets/components/step.css
+++ b/assets/stylesheets/components/step.css
@@ -48,7 +48,9 @@
 
 .btn-outlined {
   padding: 8px 12px;
-  border: 2px solid #333333;
+  background: #A31621;
+  color: white;
+  border: 2px solid #A31621;
   border-radius: 8px;
   font-weight: bold;
   text-decoration: none;
@@ -59,9 +61,7 @@
 }
 
 .btn-outlined:hover {
-  background: #A31621;
-  border: 2px solid #A31621;
-  color: white;
+  opacity: 0.7;
 }
 
 /*.hideme
