--- a/assets/stylesheets/components/banner.css
+++ b/assets/stylesheets/components/banner.css
@@ -33,8 +33,8 @@
   border-radius: 8px 0 0 8px;
   border: none;
   font-family: "Avenir", "Nunito Sans", "sans-serif";
-  font-size: 16px;
-  width: 240px;
+  font-size: 18px;
+  width: 260px;
 }
 
 .shake {
@@ -60,6 +60,7 @@
   font-size: 14px;
   color: white;
   animation: fadein 0.5s;
+  text-align: center;
 }
 
 @keyframes fadein {
