--- a/assets/stylesheets/components/step.css
+++ b/assets/stylesheets/components/step.css
@@ -74,7 +74,7 @@
 @media (max-width: 1200px) {
   .split {
     flex-direction: column;
-    padding: 64px 0;
+    padding: 32px 0;
   }
 
   .reverse {
@@ -97,9 +97,10 @@
     text-align: center;
   }
 
-  .number {
+  .number, #grey-number{
     font-size: 240px;
     text-align: center;
+    color: #BDBDBD;
   }
 }
 
