Compress Banner Mobile

--- a/assets/stylesheets/components/banner.css
+++ b/assets/stylesheets/components/banner.css
@@ -116,7 +116,7 @@ button:focus {
 
 @media screen and (max-width: 575px) {
   .banner {
-    background-image: url(../../images/banner-mobile.jpg);
+    background-image: url(../../images/banner-mobile-compressed.jpg);
   }
 
   .title {
