--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,8 +17,8 @@
     <!-- Facebook Open Graph data -->
     <meta property="og:title" content="Wandern | Plan your trail accommodation" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://wanderntrails.com" />
-    <meta property="og:image" content="http://wanderntrails.com/og-image.png" />
+    <meta property="og:url" content="https://wanderntrails.com" />
+    <meta property="og:image" content="https://wanderntrails.com/og-image.png" />
     <meta property="og:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails. See your trail’s stages, water sources, and resupply points." />
     <meta property="og:site_name" content="Wandern" />
 
@@ -27,7 +27,7 @@
     <meta name="twitter:text:title" content="Wandern | Plan your trail accommodation">
     <meta name="twitter:title" content="Wandern | Plan your trail accommodation">
     <meta name="twitter:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails. See your trail’s stages, water sources, and resupply points.">
-    <meta name="twitter:image:src" content="http://wanderntrails.com/og-image.png">
+    <meta name="twitter:image:src" content="https://wanderntrails.com/og-image.png">
 
     <meta name="author" content="Alizeh Khan & Seyhan Van Khan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
