--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
   <div class="box">
     <div class="split container reverse">
       <div class="box-image">
-        <img src="assets/images/step-2.png" alt="Preview of accommodation cards added to itinerary and availability calendar">
+        <img src="assets/images/step-2.svg" alt="Preview of accommodation cards added to itinerary and availability calendar">
       </div>
       <div class="box-info">
         <p class="number" id="grey-number">2</p>
@@ -89,7 +89,7 @@
         </div>
       </div>
       <div class="box-image">
-        <img src="assets/images/step-3.png" alt="Preview of booking checkout">
+        <img src="assets/images/step-3.svg" alt="Preview of booking checkout">
       </div>
     </div>
   </div>
