--- a/assets/stylesheets/components/banner.css
+++ b/assets/stylesheets/components/banner.css
@@ -14,26 +14,24 @@
 }
 
 .title {
-  font-size: 64px;
+  font-size: 56px;
   padding-top: 120px;
   color: white;
-  font-weight: lighter;
   text-align: center;
 }
 
 .subtitle {
-  font-size: 24px;
+  font-size: 20px;
   text-align: center;
   color: white;
   padding: 16px 0;
 }
 
 .input-email {
-  padding: 14px 0 14px 14px;
+  padding: 16px 0 16px 16px;
   border-radius: 8px 0 0 8px;
   border: none;
-  font-family: "Avenir", "Nunito Sans", "sans-serif";
-  font-size: 18px;
+  font-size: 16px;
   width: 260px;
 }
 
@@ -59,7 +57,7 @@
 }
 
 .btn-send {
-  background: #A31621;
+  background: var(--wandernOrange);
   border: none;
   border-radius: 0 8px 8px 0;
   display: flex;
@@ -104,15 +102,13 @@ select:focus,
 textarea:focus,
 button:focus {
     outline: none;
-    background: #F2F2F2;
+    background: #F8FAFC;
 }
 
 #form-request-access {
   display: flex;
   margin-top: 20px;
 }
-
-
 
 @media screen and (max-width: 575px) {
   .banner {
