--- a/assets/stylesheets/components/step.css
+++ b/assets/stylesheets/components/step.css
@@ -1,5 +1,5 @@
 .grey {
-  background: #f2f2f2;
+  background: #F8FAFC;
 }
 
 .split {
@@ -9,17 +9,12 @@
 }
 
 .number {
-  font-family: "Circular Std", "Nunito Sans", "sans-serif";
-  font-weight: lighter;
+  font-weight: 700;
   font-size: 360px;
-  color: white;
+  color: var(--blueGray200);
   margin: 0;
   width: 200px;
   text-align: right;
-}
-
-#grey-number {
-  color: #f2f2f2;
 }
 
 .box-info {
@@ -40,34 +35,30 @@
 }
 
 .title-description-button h2 {
-  font-size: 64px;
+  font-size: 56px;
   margin-bottom: 16px;
-  font-weight: lighter;
+  font-weight: 700;
   letter-spacing: -0.02em;
+  line-height: 1.1;
 }
 
 .btn-outlined {
   padding: 8px 12px;
-  background: #A31621;
-  color: white;
-  border: 2px solid #A31621;
+  border: 2px solid var(--blueGray700);
+  color: var(--blueGray700);
+  font-weight: 600;
   border-radius: 8px;
-  font-weight: bold;
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
   margin-top: 24px;
-  font-size: 16px !important;
 }
 
 .btn-outlined:hover {
-  opacity: 0.7;
+  background: var(--wandernOrange);
+  border: 2px solid var(--wandernOrange);
+  color: white;
 }
-
-/*.hideme
-{
-    opacity:0;
-}*/
 
 /*-----------------------------------MOBILE-----------------------------------*/
 
@@ -97,10 +88,9 @@
     text-align: center;
   }
 
-  .number, #grey-number{
+  .number, #grey-number {
     font-size: 240px;
     text-align: center;
-    color: #BDBDBD;
   }
 }
 
