--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,75 +1,45 @@
-/*
-$grey-1: #333333;
-$grey-2: #4f4f4f;
-$grey-3: #828282;
-$grey-4: #bdbdbd;
-$grey-5: #e0e0e0;
-$grey-6: #f2f2f2;
-
-$wandern-blue: #1E222B;
-$wandern-red: #A31621;
-*/
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
 @import url(components/banner.css);
 @import url(components/container.css);
-@import url(components/feature.css);
+@import url(components/features.css);
 @import url(components/footer.css);
 @import url(components/step.css);
 @import url(components/privacy.css);
 
-/*------------------------------------FONTS-----------------------------------*/
-
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400;700&display=swap');
-
-@font-face {
-  font-family: 'Circular Std';
-  font-weight: lighter;
-  src: url('../fonts/Circular Std/CircularStd-Book.ttf');
+:root {
+  --blueGray50: #F8FAFC;
+  --blueGray100: #F1F5F9;
+  --blueGray200: #E2E8F0;
+  --blueGray300: #CBD5E1;
+  --blueGray400: #94A3B8;
+  --blueGray500: #64748B;
+  --blueGray600: #475569;
+  --blueGray700: #334155;
+  --blueGray800: #1E293B;
+  --wandernOrange: #CF5C36;
+  --bodyFont: 'Open Sans', sans-serif;
 }
 
-@font-face {
-  font-family: 'Circular Std';
-  font-weight: normal;
-  src: url('../fonts/Circular Std/CircularStd-Medium.ttf');
-}
-
-@font-face {
-  font-family: 'Circular Std';
-  font-weight: bold;
-  src: url('../fonts/Circular Std/CircularStd-Bold.ttf');
-}
-
-p, address {
-  font-family: "Avenir", "Nunito Sans", "sans-serif";
+* {
   margin: 0;
-  line-height: 1.4em;
 }
 
-h1, h2, h3 {
-  font-family: "Circular Std", "Nunito Sans", "sans-serif";
-  margin: 0;
-  letter-spacing: -0.02em;
+body {
+  font-family: var(--bodyFont);
+  color: var(--blueGray700);
+  font-weight: 400;
 }
 
 h1, h2 {
   font-size: 56px;
+  font-weight: 700;
 }
 
 a {
   text-decoration: none;
-  color: #333333;
-  font-family: "Avenir", "Nunito Sans", "sans-serif";
+  color: var(--bodyFont);
 }
 
-body {
-  margin: 0;
-  color: #333333;
-}
-
-.unselectable, img, .number, .btn-outlined {
+.unselectable {
   user-select: none;
-}
-
-img {
-  pointer-events: none;
 }
